# Vectorized-loops

./: CMakeLists.txt  Readme.md  main.cpp
src/: vFor.cpp  vFor.hpp
